add favicon and best colors for the front

--- a/front/index.html
+++ b/front/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./style.css">
     <title>Generate me a Passwd!</title>
 </head>
 <body>
     <div id="content">
         <h1>Generate me a password !</h1>
-        <input id="passLen" placeholder='length (default : 12, max : 50)' type="number" min="12" max="50">
+        <input id="passLen" placeholder='length' type="number" min="12" max="50">
         <p id="output">_ _ _</p>
         <button id="gen">Generate</button>
     </div>
